<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="411dp"
        android:layout_height="107dp"
        android:contentDescription="@string/background1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/component_5"
        tools:layout_editor_absoluteY="-34dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#2A2A37"
        android:contentDescription="@string/Save"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background2"
        android:onClick="onClick1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle_38"
        tools:layout_editor_absoluteY="-53dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="171dp"
        android:layout_height="141dp"
        android:contentDescription="@string/Ava"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:srcCompat="@drawable/group_55"
        tools:layout_editor_absoluteY="73dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="413dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/Panel"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:srcCompat="@drawable/group_43"
        tools:layout_editor_absoluteX="-2dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="401dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/Name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Username"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:layout_editor_absoluteX="2dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="410dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="Email"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        tools:layout_editor_absoluteX="2dp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="407dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Phone"
        android:ems="10"
        android:inputType="phone"
        android:text="Phone"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:layout_editor_absoluteX="2dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="410dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Gender"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Gender"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="409dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/DOB"
        android:ems="10"
        android:inputType="date"
        android:text="Data Of Birth"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="132dp"
        android:layout_height="38dp"
        android:contentDescription="@string/SignOut"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:srcCompat="@drawable/sign_out"
        tools:layout_editor_absoluteX="139dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:backgroundTint="#F8F2F2"
        android:onClick="onClick2"
        app:srcCompat="@drawable/frame_37"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="589dp" />

</androidx.constraintlayout.widget.ConstraintLayout>