<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewResident">
  <ImageView
      android:id="@+id/imageView"
      android:layout_width="1000dp"
      android:layout_height="1000dp"
      android:contentDescription="@string/background1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/street_facade_of_the_long_house" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="1000dp"
      android:layout_height="1000dp"
      android:contentDescription="@string/background2"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.456"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/rectangle_7" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="95dp"
      android:layout_height="128dp"
      android:layout_marginTop="50dp"
      android:contentDescription="@string/Logo"
      app:layout_constraintBottom_toTopOf="@+id/imageView4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.462"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/logo" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="401dp"
      android:layout_height="268dp"
      android:contentDescription="@string/Reg"
      app:layout_constraintBottom_toTopOf="@+id/button4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      app:srcCompat="@drawable/______________1" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/Text1"
      android:text="Smart House"
      android:textColor="#FFFFFF"
      android:textSize="20sp"
      app:layout_constraintBottom_toTopOf="@+id/imageView4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.452"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3"
      app:layout_constraintVertical_bias="0.476" />

  <Button
      android:id="@+id/button3"
      android:layout_width="171dp"
      android:layout_height="55dp"
      android:layout_marginTop="16dp"
      android:background="@color/EnterYourHouse"
      android:backgroundTint="@color/EnterYourHouse"
      android:contentDescription="@string/button1"
      android:drawableTint="@color/EnterYourHouse"
      android:foregroundTint="@color/EnterYourHouse"
      android:onClick="onClick"
      android:text="Enter Your Home"
      app:iconTint="@color/EnterYourHouse"
      app:layout_constraintEnd_toEndOf="@+id/imageView4"
      app:layout_constraintHorizontal_bias="0.514"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/button4"
      app:strokeColor="@color/EnterYourHouse" />

  <Button
      android:id="@+id/button4"
      android:layout_width="164dp"
      android:layout_height="48dp"
      android:layout_marginBottom="104dp"
      android:background="#2A2A37"
      android:contentDescription="@string/button2"
      android:drawableTint="@color/NewResident"
      android:onClick="onClick"
      android:text="New Resident"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:strokeColor="#2A2A37" />

  <EditText
      android:id="@+id/editTextTextEmailAddress"
      android:layout_width="289dp"
      android:layout_height="53dp"
      android:layout_marginTop="56dp"
      android:contentDescription="@string/Email"
      android:ems="10"
      android:inputType="textEmailAddress"
      android:text="E-mail"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.47"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <EditText
      android:id="@+id/editTextNumberPassword"
      android:layout_width="288dp"
      android:layout_height="48dp"
      android:layout_marginTop="12dp"
      android:ems="10"
      android:inputType="numberPassword"
      android:text="@string/Password"
      app:layout_constraintEnd_toEndOf="@+id/imageView4"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
      android:contentDescription="@string/Password"/>

  <EditText
      android:id="@+id/editTextTextPersonName3"
      android:layout_width="288dp"
      android:layout_height="41dp"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="Name"
      app:layout_constraintEnd_toEndOf="@+id/imageView4"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="@+id/imageView4"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
      android:contentDescription="@string/Name"/>

</androidx.constraintlayout.widget.ConstraintLayout>
